syntax = "proto3";

package your.package.name;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "jira.history.grpc";
option java_outer_classname = "HistoryServiceProto";

service GrpcHistoryService {
  rpc GetHistory(GetHistoryRequest) returns (PaginatedHistory);
  rpc AddHistory(AddHistoryRequest) returns (AddHistoryResponse);
}

message GetHistoryRequest {
  string id = 1;
}

message AddHistoryRequest {
  string collectionName = 1;
}

message AddHistoryResponse {
  int32 status = 1;
}

message PaginatedHistory {
  repeated HistoryEntity data = 1;
  int32 itemCount = 2;
  int32 limit = 3;
  int32 page = 4;
  int32 pageCount = 5;
}

message HistoryEntity {
  string documentId = 1;
  string collectionName = 2;
  string action = 3;
  string author = 4;
  repeated string attributes = 5;
  map<string, string> oldValue = 6;
  map<string, string> newValue = 7;
}


